<resources>
    <string name="action_NewUserRequest">Send invite link with…</string>
    <string name="action_ViewFile">View %s with…</string>
    <string name="app_name">SafeSlinger</string>
    <string name="app_TranslatorName">Michael W Farb</string>
    <string name="ask_BackupDisabledRemindLater">Backup is disabled. Do you want to adjust backup settings and keep this reminder?</string>
    <string name="ask_ConfirmUseOlderDeviceOrKey">%s has a more recent device or key, are you sure you want to use this older one?</string>
    <string name="ask_FileExistsOverwrite">File name %s already exists. Overwrite?</string>
    <string name="ask_GoogleAccountToReceiveMsgs">Without a Google Account you will only be able to send, NOT receive messages. Do you want to add a Google account?</string>
    <string name="ask_QuitConfirmation">Quit? Are you sure?</string>
    <string name="ask_SendErrorData">We\'d like your help improving SafeSlinger. Would you like to automatically send any errors to us?</string>
    <string name="btn_Accept">Accept</string>
    <string name="btn_Agree" translatable="false">I Agree</string>
    <string name="btn_BeginExchangeProximity">Begin Exchange</string>
    <string name="btn_Cancel">Cancel</string>
    <string name="btn_Close">Close</string>
    <string name="btn_Continue">Continue</string>
    <string name="btn_discard">Discard</string>
    <string name="btn_Done">Done</string>
    <string name="btn_Exit">Exit</string>
    <string name="btn_Import">Import</string>
    <string name="btn_Introduce">Introduce</string>
    <string name="btn_Match">Next</string>
    <string name="btn_No">No</string>
    <string name="btn_NoMatch">No Match</string>
    <string name="btn_NotRemind">Forget</string>
    <string name="btn_OK">OK</string>
    <string name="btn_Refuse">Refuse</string>
    <string name="btn_Reject" translatable="false">Reject</string>
    <string name="btn_Remind">Remind</string>
    <string name="btn_Save">Save</string>
    <string name="btn_SelectFile">Add Attachment</string>
    <string name="btn_SendFile">Send</string>
    <string name="btn_Yes">Yes</string>
    <string name="choice_10mins">10 minutes</string>
    <string name="choice_1hour">1 hour</string>
    <string name="choice_1min">1 minute</string>
    <string name="choice_20mins">20 minutes</string>
    <string name="choice_2hours">2 hours</string>
    <string name="choice_3mins">3 minutes</string>
    <string name="choice_40mins">40 minutes</string>
    <string name="choice_4hours">4 hours</string>
    <string name="choice_5mins">5 minutes</string>
    <string name="choice_8hours">8 hours</string>
    <string name="choice_auto_storage">Default Storage</string>
    <string name="choice_external_storage">External Storage</string>
    <string name="choice_internal_storage">Internal Storage</string>
    <string name="choice_nolimit">No Limit</string>
    <string name="choice_NumUsers">%d users</string>
    <string name="choice_SaveDirectory">Save Directory</string>
    <string name="choice_SaveFile">Save file</string>
    <string name="choice_Up">Up</string>
    <string name="error_AllMembersMustUpgrade">Some members are using an older version; all members must at least use %s.</string>
    <string name="error_AllMembersMustUpgradeBadKeyFormat">All members must upgrade, some are using older key formats.</string>
    <string name="error_AllMembersMustUpgradeBadPushToken">All members must upgrade, some are using older push registration formats.</string>
    <string name="error_AudioPlayerDecodeError">Audio player decoding error.</string>
    <string name="error_AudioPlayerError">Cannot play the recording.</string>
    <string name="error_AudioRecorderEncodeError">Audio recorder encoding error.</string>
    <string name="error_AudioRecorderPermissionError">Microphone permission required. Please go to iOS Settings to enable Microphone permissions.</string>
    <string name="error_BackupNotFound">No backup to restore.</string>
    <string name="error_BackupNotSupportedDevice">Device does not support backup restore.</string>
    <string name="error_BadCopyProtectUpgrade">Due to a bug in Android 4.1, you will have to uninstall and reinstall SafeSlinger.</string>
    <string name="error_C2DMRegAccountMissing">A Google account is required. Please open the account manager and add a Google account.</string>
    <string name="error_C2DMRegAuthenticationFailed">Registration not authenticated, please retry manually later.</string>
    <string name="error_C2DMRegInvalidSender">Registration is not available for this version, please check for an updated version.</string>
    <string name="error_C2DMRegPhoneRegistrationError">Incorrect device registration with Google. This device does not currently support push messaging.</string>
    <string name="error_C2DMRegServiceNotAvailable">Push registration service not available, scheduling retry in %d seconds.</string>
    <string name="error_C2DMRegTooManyRegistrations">Too many applications are registered for Push. Please uninstall some other applications and retry.</string>
    <string name="error_CannotSendEmptyFile">Cannot send an empty attachment.</string>
    <string name="error_CannotSendFilesOver">Cannot send attachments greater than %d bytes in size.</string>
    <string name="error_CannotSendNullFile">Cannot send a null attachment.</string>
    <string name="error_contactCreationFailure">Contact creation failed.</string>
    <string name="error_ContactInsertFailed">Contact insert failed.</string>
    <string name="error_ContactNameMissing">This contact is missing a name, please edit.</string>
    <string name="error_ContactNameMissing2">This contact is missing a name, please reselect.</string>
    <string name="error_ContactUpdateFailed">Contact update failed.</string>
    <string name="error_CorrectYourInternetConnection">Internet not available, check your settings.</string>
    <string name="error_couldNotExtractPrivateKey">Could not extract private key.</string>
    <string name="error_ExchangeProtocolTimeoutExceeded">Exchange timeout exceeded. Begin the exchange again.</string>
    <string name="error_FeatureIsNotSupport">%1$s is not supported on %2$s at this time.</string>
    <string name="error_FileSave">Unable to save %s.</string>
    <string name="error_FileStorageUnavailable">File storage is not available.</string>
    <string name="error_HttpCode">Server HTTP Error: %d</string>
    <string name="error_InvalidCommitVerify">Incorrect data found in exchange. Begin the exchange again.</string>
    <string name="error_InvalidCommonUserId">Please enter a positive integer.</string>
    <string name="error_InvalidContactName">A valid contact name is required.</string>
    <string name="error_InvalidIncomingMessage">Bad incoming message format.</string>
    <string name="error_InvalidMsg">Bad message format.</string>
    <string name="error_InvalidRecipient">Invalid recipient.</string>
    <string name="error_LocalGroupCommitDiffer">You have reported a difference in phrases. Begin the exchange again.</string>
    <string name="error_MessageInvalidPeerKeyFormat">The peer key format is invalid.</string>
    <string name="error_MessageSignatureVerificationFails">Signature verification failed.</string>
    <string name="error_minPassphraseRequire">Passphrases require at least %d characters.</string>
    <string name="error_MinUsersRequired">A minimum of %d members are required to exchange data.</string>
    <string name="error_MissingNdk">SafeSlinger did not detect NDK support on this device, which is required.</string>
    <string name="error_MoreDataThanUsers">Unexpected data found in exchange. Begin the exchange again.</string>
    <string name="error_MultipleSendNotSupported">You are attempting to send multiple items. At this time, SafeSlinger only supports sending one item at a time.</string>
    <string name="error_NoEmailAccount">Email account is not setup!</string>
    <string name="error_noPassPhrase">No passphrase entered.</string>
    <string name="error_NoWordListSelected">You must select one of the phrases before proceeding.</string>
    <string name="error_OtherGroupCommitDiffer">Someone reported a difference in phrases. Begin the exchange again.</string>
    <string name="error_OutOfMemoryError">Memory is too low to complete this operation.</string>
    <string name="error_passPhrasesDoNotMatch">Passphrases do not match.</string>
    <string name="error_PushMsgDeviceQuotaExceeded">You have exceeded the message quota for that recipient. Please retry later.</string>
    <string name="error_PushMsgInvalidRegistration">That recipient has a missing or bad push registration. You should stop sending messages to this device.</string>
    <string name="error_PushMsgMessageNotFound">Message expired.</string>
    <string name="error_PushMsgMessageTooBig">The message is too big. Reduce the size of the message.</string>
    <string name="error_PushMsgNotRegistered">That recipient\'s push registration is no longer valid. The recipient may have uninstalled SafeSlinger or turned off notifications. You should stop sending messages to this device.</string>
    <string name="error_PushMsgNotSucceed">There was an error communicating with the push notification service.</string>
    <string name="error_PushMsgQuotaExceeded">You have exceeded the message quota for this device. Please retry later.</string>
    <string name="error_PushMsgServiceFail">Notification service is not available this time. Please try to send the message later.</string>
    <string name="error_RecoderError">Cannot prepare the audio recorder.</string>
    <string name="error_ReminderToSlingKeysToUseApp">To start, \'Sling Keys\' with another phone at the same time.</string>
    <string name="error_selectDataToSend">You need an attachment or a text message to send.</string>
    <string name="error_ServerAppMessage">Server Message: \'%s\'</string>
    <string name="error_ServerAppMessageCStr">Server Message: \'%s\'</string>
    <string name="error_ServerNotResponding">No response from server.</string>
    <string name="error_ShareFileDelError">Cannot remove the shared file.</string>
    <string name="error_TimeoutWaitingForAllMembers">Timeout waiting for some group members to add data.</string>
    <string name="error_UnableFindPubKey">Unable to match public key to private key in crypto provider.</string>
    <string name="error_UnableToSaveMessageInDB">Unable to save to the message database.</string>
    <string name="label_backupCompleteDate">Last Backup Completed</string>
    <string name="label_backupRequestDate">Last Backup Request</string>
    <string name="label_ContactEmail">Your Email</string>
    <string name="label_ContactName">Your Name</string>
    <string name="label_ContactPhone">Your Phone</string>
    <string name="label_Me">Me</string>
    <string name="label_passPhraseCacheTtl">Passphrase Cache</string>
    <string name="label_Photo">Photo</string>
    <string name="label_PublicKeyID">Key ID</string>
    <string name="label_PushTokenID">Push Registration ID</string>
    <string name="label_RemindBackupDelay">Backup Reminder</string>
    <string name="label_restoreCompleteDate">Last Restore Completed</string>
    <string name="label_safeslingered">(SafeSlinger Direct Exchange)</string>
    <string name="label_targetAccountLabel">Contacts Account</string>
    <string name="label_UserName">User Name</string>
    <string name="menu_About">About</string>
    <string name="menu_ChangePassphrase">Change Passphrase</string>
    <string name="menu_DownloadDirectory">Download Directory</string>
    <string name="menu_FileManager">File Manager</string>
    <string name="menu_License">License</string>
    <string name="menu_ShowTutorial">Show Tutorial</string>
    <string name="section_advanced">Advanced</string>
    <string name="section_backup">Backup</string>
    <string name="section_general">General</string>
</resources>